# demo_18th_repo

.catkin_tools/profiles/default/: devel_collisions.txt
scripts/: aliases.bash  readme.sh
src/controller/: CMakeLists.txt  package.xml
src/controller/config/: controller.yaml
src/controller/include/: controller.hpp  controller_handle.hpp  pid_controller.h  solver_base.h  stanley_solver.h  types.h
src/controller/src/: controller.cpp  controller_handle.cpp  main.cpp  solver_base.cpp  stanley_solver.cpp
src/floor_set/: CMakeLists.txt  readme
src/floor_set/launch/: base.launch
src/floor_set/src/: ackermann_controller.py  car_controler.py  car_motor.py  car_teleop.py
src/planning/: CMakeLists.txt  package.xml
src/planning/include/: planner1.h  planner_base.h  planning_node.hpp  planning_node_handle.hpp  type.h
src/planning/launch/: planning_node.launch
src/planning/src/: main.cpp  planner1.cpp  planner_base.cpp  planning_node.cpp  planning_node_handle.cpp
src/sensors/2d_lidar_undistortion/: CMakeLists.txt
src/sensors/imu_zeroing/: CMakeLists.txt
src/sensors/udev_rules/: imu.rules  lslidar.rules  wit_gps.rules
src/teleop_ackermann_joy/: CMakeLists.txt  package.xml
src/teleop_ackermann_joy/config/: 85-jscal-custom-calibration.rules  common.yaml  wfly_et07.config.yaml  xbox_wired.config.yaml
src/teleop_ackermann_joy/launch/: teleop.launch
src/ucar_bringup/: CMakeLists.txt
src/ucar_commander/: CMakeLists.txt  package.xml
src/ucar_common_msgs/: CMakeLists.txt  package.xml
src/ucar_navigation/: CMakeLists.txt
(+42 files in other folders)
